--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,17 +24,27 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
+      
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
-      - name: Use Node.JS
-      - uses: actions/setup-node@v3
+        
+      - name: Use Node.js
+        uses: actions/setup-node@v3
         with:
           node-version: '18.x'
-      - run: npm ci
-      - run: npm test
-      - run: npm run build
-      - run: npm run deploy
+        
+      - name: Install dependencies via npm ci
+        run: npm ci
+      
+      - name: Running npm test
+        run: npm test
+        
+      - name: Running npm build
+        run: npm run build
+        
+      - name: Running npm run deploy
+        run: npm run deploy
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
