--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -40,12 +40,10 @@ jobs:
       - name: Running npm test
         run: npm test
         
-      - name: Running npm build
-        run: npm run build
-        
-      - name: Running npm run deploy
-        run: npm run deploy
-
+      - name: Running npm devStart
+        run: npm run devStart
+      
+      
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
