--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -17,5 +17,6 @@ javascript:
   - enjin-pelanggan/**/*
   - enjin-proksi/**/*
 
+# Changes in any folder in repository
 requires review:
   - '**/*'
