--- a/.github/workflows/update-pr-labels.yml
+++ b/.github/workflows/update-pr-labels.yml
@@ -11,18 +11,17 @@ jobs:
     - name: Update PR Labels
       uses: actions/github-script@v6
       with:
-        github-token: ${{secrets.GITHUB_TOKEN}}
+        github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
           const prNumber = context.payload.pull_request.number;
           const owner = context.repo.owner;
           const repo = context.repo.repo;
           const reviewState = context.payload.review.state;
-          const octokit = github.getOctokit(process.env.GITHUB_TOKEN);
-
+          
           // Define label to add and remove based on the review state
           let labelToAdd = '';
           let labelToRemove = 'requires review'; // Default label to remove
-
+          
           if (reviewState === 'approved') {
             labelToAdd = 'Approved';
           } else if (reviewState === 'changes_requested') {
@@ -31,10 +30,10 @@ jobs:
             labelToAdd = 'requires review';
             labelToRemove = 'Changes Requested';
           }
-
+          
           // Remove label
           try {
-            await octokit.rest.issues.removeLabel({
+            await github.rest.issues.removeLabel({
               owner,
               repo,
               issue_number: prNumber,
@@ -47,10 +46,10 @@ jobs:
             }
             console.log(`Label '${labelToRemove}' not found, skipping.`);
           }
-
+          
           // Add label
           try {
-            await octokit.rest.issues.addLabels({
+            await github.rest.issues.addLabels({
               owner,
               repo,
               issue_number: prNumber,
