--- a/.github/workflows/update-pr-labels.yml
+++ b/.github/workflows/update-pr-labels.yml
@@ -1,5 +1,9 @@
 name: Update PR Labels
 
+permissions:
+  contents: read
+  pull-requests: write
+
 on:
   pull_request_review:
     types: [submitted, dismissed]
