--- a/.github/workflows/update-pr-labels.yml
+++ b/.github/workflows/update-pr-labels.yml
@@ -1,4 +1,4 @@
-name: PR Review Workflow
+name: auto-pr-update-label
 
 permissions:
   contents: read
@@ -7,8 +7,6 @@ permissions:
 on:
   pull_request_review:
     types: [submitted, dismissed]
-  issue_comment:
-    types: [created]
 
 jobs:
   update-labels:
@@ -22,56 +20,51 @@ jobs:
           const prNumber = context.payload.pull_request.number;
           const owner = context.repo.owner;
           const repo = context.repo.repo;
-          const reviewAction = context.payload.action;
           const reviewState = context.payload.review.state;
 
           let labelToAdd = '';
           let labelToRemove = '';
 
-          // Proceed only if the action is a review submission or dismissal
-          if (reviewAction === 'submitted' || reviewAction === 'dismissed') {
-            if (reviewState === 'approved') {
-              labelToAdd = 'Approved';
-              labelToRemove = 'requires review';
-            } else if (reviewState === 'changes_requested') {
-              labelToAdd = 'Changes Requested';
-              labelToRemove = 'requires review';
-            } else if (reviewState === 'dismissed') {
-              labelToAdd = 'requires review';
-              labelToRemove = 'Changes Requested';
-            }
+          if (reviewState === 'approved') {
+            labelToAdd = 'Approved';
+            labelToRemove = 'requires review';
+          } else if (reviewState === 'changes_requested') {
+            labelToAdd = 'Changes Requested';
+            labelToRemove = 'requires review';
+          } else if (reviewState === 'dismissed') {
+            labelToAdd = 'requires review';
+            labelToRemove = 'Changes Requested';
           }
 
-            // Check if labelToRemove exists before attempting to remove it
-            if (labelToRemove) {
-              try {
-                await github.rest.issues.removeLabel({
-                  owner,
-                  repo,
-                  issue_number: prNumber,
-                  name: labelToRemove
-                });
-                console.log(`Label '${labelToRemove}' removed`);
-              } catch (error) {
-                if (error.status !== 404) {
-                  throw error;
-                }
-                console.log(`Label '${labelToRemove}' not found, skipping.`);
-              }
-            }
-            
-            // Check if labelToAdd is non-empty before attempting to add it
-            if (labelToAdd) {
-              try {
-                await github.rest.issues.addLabels({
-                  owner,
-                  repo,
-                  issue_number: prNumber,
-                  labels: [labelToAdd]
-                });
-                console.log(`Label '${labelToAdd}' added`);
-              } catch (error) {
+          // Check if labelToRemove exists before attempting to remove it
+          if (labelToRemove) {
+            try {
+              await github.rest.issues.removeLabel({
+                owner,
+                repo,
+                issue_number: prNumber,
+                name: labelToRemove
+              });
+              console.log(`Label '${labelToRemove}' removed`);
+            } catch (error) {
+              if (error.status !== 404) {
                 throw error;
               }
+              console.log(`Label '${labelToRemove}' not found, skipping.`);
             }
-  
+          }
+          
+          // Check if labelToAdd is non-empty before attempting to add it
+          if (labelToAdd) {
+            try {
+              await github.rest.issues.addLabels({
+                owner,
+                repo,
+                issue_number: prNumber,
+                labels: [labelToAdd]
+              });
+              console.log(`Label '${labelToAdd}' added`);
+            } catch (error) {
+              throw error;
+            }
+          }
