--- a/.github/workflows/update-pr-labels.yml
+++ b/.github/workflows/update-pr-labels.yml
@@ -24,38 +24,37 @@ jobs:
 
           let labelsUpdated = false;
           let labelToAdd = '';
-          let labelToRemove = '';
+          let labelToRemove = [];
 
           if (reviewState === 'approved') {
             labelToAdd = 'approved';
-            labelToRemove = 'requires review';
+            labelsToRemove = ['changes requested', 'requires review'];
 
           } else if (reviewState === 'changes_requested') {
             labelToAdd = 'changes requested';
-            labelToRemove = 'requires review';
+            labelsToRemove = ['approved', 'requires review'];
 
           } else if (reviewState === 'dismissed') {
             labelToAdd = 'requires review';
-            labelToRemove = 'changes requested';
+            labelsToRemove = ['changes requested', 'requires review'];
           }
 
-          // Check if labelToRemove exists before attempting to remove it
-          if (labelToRemove) {
+          // Remove labels
+          for (const label of labelsToRemove) {
             try {
               await github.rest.issues.removeLabel({
                 owner,
                 repo,
                 issue_number: prNumber,
-                name: labelToRemove
+                name: label
               });
-              console.log(`Label '${labelToRemove}' removed`);
+              console.log(`Label '${label}' removed`);
               labelsUpdated = true;
-
             } catch (error) {
               if (error.status !== 404) {
                 throw error;
               }
-              console.log(`Label '${labelToRemove}' not found, skipping.`);
+              console.log(`Label '${label}' not found, skipping.`);
             }
           }
           
