--- a/.github/workflows/update-pr-labels.yml
+++ b/.github/workflows/update-pr-labels.yml
@@ -36,7 +36,7 @@ jobs:
 
           } else if (reviewState === 'dismissed') {
             labelToAdd = 'requires review';
-            labelsToRemove = ['changes requested', 'requires review'];
+            labelsToRemove = ['approved', 'changes requested'];
           }
 
           // Remove labels
