--- a/.github/workflows/update-pr-labels.yml
+++ b/.github/workflows/update-pr-labels.yml
@@ -39,25 +39,28 @@ jobs:
             labelsToRemove = ['approved', 'changes requested'];
           }
 
-          // Remove labels
-          for (const label of labelsToRemove) {
-            try {
-              await github.rest.issues.removeLabel({
-                owner,
-                repo,
-                issue_number: prNumber,
-                name: label
-              });
-              console.log(`Label '${label}' removed`);
-              labelsUpdated = true;
-            } catch (error) {
-              if (error.status !== 404) {
-                throw error;
+          // Check if there are labels to remove, because any comments added during
+          // Changes Requested State is considered as pull_request_review submitted 
+          if (labelsToRemove.length > 0 ) {
+            for (const label of labelsToRemove) {
+              try {
+                await github.rest.issues.removeLabel({
+                  owner,
+                  repo,
+                  issue_number: prNumber,
+                  name: label
+                });
+                console.log(`Label '${label}' removed`);
+                labelsUpdated = true;
+              } catch (error) {
+                if (error.status !== 404) {
+                  throw error;
+                }
+                console.log(`Label '${label}' not found, skipping.`);
               }
-              console.log(`Label '${label}' not found, skipping.`);
             }
           }
-          
+
           // Check if labelToAdd is non-empty before attempting to add it
           if (labelToAdd) {
             try {
