--- a/.github/workflows/pr-labeler.yml
+++ b/.github/workflows/pr-labeler.yml
@@ -6,10 +6,10 @@ permissions:
 
 on:
   pull_request:
-    types: [opened]
+    types: [opened, ready_for_review]
 
 jobs:
-  label:
+  label-open-pr:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -18,3 +18,36 @@ jobs:
         repo-token: "${{ secrets.GITHUB_TOKEN }}"
         configuration-path: .github/labeler.yml
         sync-labels: true
+
+  label-draft-pr:
+    runs-on: ubuntu-latest
+    if: github.event.pull_request.draft == true
+    steps:
+    - name: Label Draft PR as 'on hold'
+      uses: actions/github-script@v6
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        script: |
+          const prNumber = context.payload.pull_request.number;
+          const owner = context.repo.owner;
+          const repo = context.repo.repo;
+
+          await github.rest.issues.addLabels({
+            owner,
+            repo,
+            issue_number: prNumber,
+            labels: ['on hold']
+          });
+        
+    - name: Label non-Draft or Ready for Review PR as 'requires review'
+      if: '! github.event.pull_request.draft'
+      uses: actions/github-script@v6
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        script: |
+          await github.rest.issues.addLabels({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            issue_number: context.payload.pull_request.number,
+            labels: ['requires review']
+          });
