--- a/.github/workflows/pr-labeler.yml
+++ b/.github/workflows/pr-labeler.yml
@@ -6,7 +6,7 @@ permissions:
 
 on:
   pull_request:
-    types: [opened, ready_for_review]
+    types: [opened, ready_for_review, converted_to_draft]
 
 jobs:
   label-open-pr:
@@ -23,7 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.pull_request.draft == true
     steps:
-    - name: Label Draft PR as 'on hold'
+    - name: Update labels for Draft PR
       uses: actions/github-script@v6
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -32,12 +32,31 @@ jobs:
           const owner = context.repo.owner;
           const repo = context.repo.repo;
 
+          // Add 'on hold' label if PR is Draft when it's opened
           await github.rest.issues.addLabels({
             owner,
             repo,
             issue_number: prNumber,
             labels: ['on hold']
           });
+
+          // Remove 'requires review' label if PR is converted to draft
+          if (github.event.action == 'converted_to_draft') {
+            try {
+              await github.rest.issues.removeLabel({
+                owner,
+                repo,
+                issue_number: prNumber,
+                name: 'requires review'
+              });
+              console.log("Label 'requires review' removed");
+            } catch (error) {
+              if (error.status !== 404) {
+                throw error;
+              }
+              console.log("Label 'requires review' not found, skipping.");
+            }
+          }
         
     - name: Label non-Draft or Ready for Review PR as 'requires review'
       if: '! github.event.pull_request.draft'
