--- a/.github/workflows/pr-labeler.yml
+++ b/.github/workflows/pr-labeler.yml
@@ -9,21 +9,19 @@ on:
     types: [opened, ready_for_review, converted_to_draft]
 
 jobs:
-  label-open-pr:
+  label-pr:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    
     - uses: actions/labeler@v4
       with:
         repo-token: "${{ secrets.GITHUB_TOKEN }}"
         configuration-path: .github/labeler.yml
         sync-labels: true
 
-  label-draft-pr:
-    runs-on: ubuntu-latest
-    if: github.event.pull_request.draft == true
-    steps:
     - name: Update labels for Draft PR
+      if: github.event.pull_request.draft == true || github.event.action == 'converted_to_draft'
       uses: actions/github-script@v6
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -32,7 +30,7 @@ jobs:
           const owner = context.repo.owner;
           const repo = context.repo.repo;
 
-          // Add 'on hold' label if PR is Draft when it's opened
+          // Add 'on hold' label
           await github.rest.issues.addLabels({
             owner,
             repo,
@@ -40,33 +38,52 @@ jobs:
             labels: ['on hold']
           });
 
-          // Remove 'requires review' label if PR is converted to draft
-          if (github.event.action == 'converted_to_draft') {
-            try {
-              await github.rest.issues.removeLabel({
-                owner,
-                repo,
-                issue_number: prNumber,
-                name: 'requires review'
-              });
-              console.log("Label 'requires review' removed");
-            } catch (error) {
-              if (error.status !== 404) {
-                throw error;
-              }
-              console.log("Label 'requires review' not found, skipping.");
+          // Remove 'requires review' label
+          try {
+            await github.rest.issues.removeLabel({
+              owner,
+              repo,
+              issue_number: prNumber,
+              name: 'requires review'
+            });
+            console.log("Label 'requires review' removed");
+          } catch (error) {
+            if (error.status !== 404) {
+              throw error;
             }
+            console.log("Label 'requires review' not found, skipping.");
           }
-        
-    - name: Label non-Draft or Ready for Review PR as 'requires review'
-      if: '! github.event.pull_request.draft'
+
+    - name: Label PR as 'requires review' when ready
+      if: github.event.pull_request.draft == false || github.event.action == 'ready_for_review'
       uses: actions/github-script@v6
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
+          const prNumber = context.payload.pull_request.number;
+          const owner = context.repo.owner;
+          const repo = context.repo.repo;
+
+          // Add 'requires review' label
           await github.rest.issues.addLabels({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            issue_number: context.payload.pull_request.number,
+            owner,
+            repo,
+            issue_number: prNumber,
             labels: ['requires review']
           });
+
+          // Remove 'on hold' label
+          try {
+            await github.rest.issues.removeLabel({
+              owner,
+              repo,
+              issue_number: prNumber,
+              name: 'on hold'
+            });
+            console.log("Label 'on hold' removed");
+          } catch (error) {
+            if (error.status !== 404) {
+              throw error;
+            }
+            console.log("Label 'on hold' not found, skipping.");
+          }
