Test sync on trigger

--- a/.github/workflows/pr-labeler.yml
+++ b/.github/workflows/pr-labeler.yml
@@ -6,7 +6,7 @@ permissions:
 
 on:
   pull_request:
-    types: [opened, ready_for_review, converted_to_draft]
+    types: [opened, synchronize, ready_for_review, converted_to_draft]
 
 jobs:
   label-pr:
