Fix prAuthor vars

--- a/.github/workflows/auto-pr-commenter.yml
+++ b/.github/workflows/auto-pr-commenter.yml
@@ -15,3 +15,7 @@ jobs:
         with:
           github-token: "${{ github.token }}"
           config-file: ".github/pr-commenter.yml"
+          template-variables: |
+            {
+              "prAuthor": "${{ github.event.pull_request.user.login }}",
+            }
