--- a/enjin-core/pyproject.toml
+++ b/enjin-core/pyproject.toml
@@ -2,4 +2,4 @@
 name = "enjin"
 version = "1.0.0"
 description = ""
-authors = ["Courtsite <tech@courtsite.my>"]
+authors = ["Courtsite <tech@courtsite.m1y>"]
