--- a/.github/workflows/auto-pr-commenter.yml
+++ b/.github/workflows/auto-pr-commenter.yml
@@ -22,15 +22,18 @@ jobs:
       - name: Check for .env file changes
         id: env_check
         run: |
-          echo "::set-output name=file_changed::$(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} | grep -q '.env.' && echo 'true' || echo 'false')"
+          if git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} | grep -q '.env.'; then
+            echo "changed=true" >> $GITHUB_ENV
+          else
+            echo "changed=false" >> $GITHUB_ENV
+          fi
 
       - name: Comment PR if .env files changed
-        if: steps.env_check.outputs.file_changed == 'true'
+        if: env.changed == 'true'
         uses: mshick/add-pr-comment@v2
         with:
           message: |
             :wave: Hello @${{ github.event.pull_request.user.login }}!
-
             :eyes: It looks like you're changing a `.env` file.
 
             Please ensure any new environment variables are communicated to the infrastructure team for proper setup in their target environments.
