--- a/.github/workflows/auto-pr-commenter.yml
+++ b/.github/workflows/auto-pr-commenter.yml
@@ -11,6 +11,8 @@ jobs:
   pr-comment:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+
       # - uses: exercism/pr-commenter-action@v1.5.1
       #   with:
       #     github-token: "${{ github.token }}"
