--- a/.github/workflows/auto-pr-commenter.yml
+++ b/.github/workflows/auto-pr-commenter.yml
@@ -12,7 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
+        with:
+          fetch-depth: 0
       # - uses: exercism/pr-commenter-action@v1.5.1
       #   with:
       #     github-token: "${{ github.token }}"
