--- a/.github/workflows/auto-pr-commenter.yml
+++ b/.github/workflows/auto-pr-commenter.yml
@@ -11,39 +11,39 @@ jobs:
   pr-comment:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: exercism/pr-commenter-action@v1.5.1
         with:
-          fetch-depth: 0
-      # - uses: exercism/pr-commenter-action@v1.5.1
+          github-token: "${{ github.token }}"
+          config-file: ".github/pr-commenter.yml"
+          template-variables: |
+            {
+              "prAuthor": "${{ github.event.pull_request.user.login }}"
+            }
+      # - uses: actions/checkout@v4
       #   with:
-      #     github-token: "${{ github.token }}"
-      #     config-file: ".github/pr-commenter.yml"
-      #     template-variables: |
-      #       {
-      #         "prAuthor": "${{ github.event.pull_request.user.login }}"
-      #       }
-      - name: Check for .env file changes
-        id: env_check
-        run: |
-          if git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} | grep -q '.env.'; then
-            echo "changed=true" >> $GITHUB_ENV
-          else
-            echo "changed=false" >> $GITHUB_ENV
-          fi
+      #     fetch-depth: 0
+      # - name: Check for .env file changes
+      #   id: env_check
+      #   run: |
+      #     if git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} | grep -q '.env.'; then
+      #       echo "changed=true" >> $GITHUB_ENV
+      #     else
+      #       echo "changed=false" >> $GITHUB_ENV
+      #     fi
 
-      - name: Comment PR if .env files changed
-        if: env.changed == 'true'
-        uses: mshick/add-pr-comment@v2
-        with:
-          message: |
-            :wave: Hello @${{ github.event.pull_request.user.login }}!
-            :eyes: It looks like you're changing a `.env` file.
+      # - name: Comment PR if .env files changed
+      #   if: env.changed == 'true'
+      #   uses: mshick/add-pr-comment@v2
+      #   with:
+      #     message: |
+      #       :wave: Hello @${{ github.event.pull_request.user.login }}!
+      #       :eyes: It looks like you're changing a `.env` file.
 
-            Please ensure any new environment variables are communicated to the infrastructure team for proper setup in their target environments.
+      #       Please ensure any new environment variables are communicated to the infrastructure team for proper setup in their target environments.
             
-            /cc @waterlegacy0
+      #       /cc @waterlegacy0
 
-            ---
-            Automated comment created by [PR Commenter](https://github.com/mshick/add-pr-comment) :robot:.
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #       ---
+      #       Automated comment created by [PR Commenter](https://github.com/mshick/add-pr-comment) :robot:.
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
