Add test pr-commenter

--- a/.github/pr-commenter.yml
+++ b/.github/pr-commenter.yml
@@ -17,3 +17,13 @@ comment:
         Please ensure any new environment variables are communicated to the infrastructure team for proper setup in their target environments.
         
         /cc @waterlegacy0
+
+    - id: migration-file-changed
+      files:
+        - 'enjin-core/enjin/*/repository/migrations/versions/**'
+      body: |
+        :eyes: It looks like you're applying migration script changes.
+
+        Please ensure the upgrade/downgrade versions are communicated to the infrastructure team for proper setup in their target environments.
+        
+        /cc @waterlegacy0
